force-app/main/default/objects/sked__Templated_Job_Tag__c/sked__Templated_Job_Tag__c.object-meta.xml
<CustomObject>
    <label>Templated Job Tag</label>
    <nameField>
        <displayFormat>TJT-{0000}</displayFormat>
        <label>Templated Job Tag Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Templated Job Tags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>