force-app/main/default/objects/sked__Templated_Job_Tag__c/fields/sked__Tag__c.field-meta.xml
<CustomField>
    <fullName>sked__Tag__c</fullName>
    <label>Tag</label>
    <referenceTo>sked__Tag__c</referenceTo>
    <relationshipLabel>Templated Job Tags</relationshipLabel>
    <relationshipName>Templated_Job_Tags</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>