force-app/main/default/objects/sked__Templated_Job_Tag__c/fields/sked__Weighting__c.field-meta.xml
<CustomField>
    <fullName>sked__Weighting__c</fullName>
    <label>Weighting</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>