force-app/main/default/objects/sked__Templated_Job_Tag__c/validationRules/sked__Weighting_mutex_not_required.validationRule-meta.xml
<ValidationRule>
    <fullName>sked__Weighting_mutex_not_required</fullName>
    <active>true</active>
    <description>A Templated Job Tag must have a weighting if it&#39;s marked as not &#39;required&#39;</description>
    <errorConditionFormula>AND(ISNULL(sked__Weighting__c), NOT(sked__Required__c))</errorConditionFormula>
    <errorDisplayField>sked__Weighting__c</errorDisplayField>
    <errorMessage>A Templated Job Tag must have a weighting if it&#39;s marked as not &#39;required&#39;</errorMessage>
</ValidationRule>