force-app/main/default/objects/sked__Templated_Job_Tag__c/validationRules/sked__Weighting_mutex_required.validationRule-meta.xml
<ValidationRule>
    <fullName>sked__Weighting_mutex_required</fullName>
    <active>true</active>
    <description>A Templated Job Tag cannot have a weighting if it&#39;s marked &#39;required&#39;</description>
    <errorConditionFormula>AND( NOT(ISNULL(sked__Weighting__c)),  sked__Required__c )</errorConditionFormula>
    <errorDisplayField>sked__Weighting__c</errorDisplayField>
    <errorMessage>A Templated Job Tag cannot have a weighting if it&#39;s marked &#39;required&#39;</errorMessage>
</ValidationRule>